# LLM-Server

./: LICENSE  README.md  config.yaml  pyproject.toml
llmserver/: __main__.py
llmserver/conversation/: Conversation.py
llmserver/core/: ApiServer.py  ServiceProvider.py
llmserver/models/: HFMemoryModel.py  HuggingFaceModel.py  interfaces.py  manager.py
llmserver/repository/: ConversationRepository.py  HuggingFaceModelRepository.py  ModelsRepository.py
llmserver/routers/: conversation.py  models.py
llmserver/utils/: Errors.py  logger.py
llmserver/utils/configuration/: ConfigurationLoader.py  HuggingFaceConfiguration.py
tests/: TestServer.py  test_modelLoading.py  test_modelsAPI.py
